@@ -8,8 +8,6 @@ repository = http://github.com/wki/Catalyst-View-ByCode
 
 [@Classic]
 
-[AutoPrereqs]
-
 [Prereqs]
 Catalyst::Runtime        = 5.80
 Devel::Declare           = 0.005007
